<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SurfaceView
        android:id="@+id/preview_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp64"
            android:gravity="center_vertical">

            <LinearLayout
                android:id="@+id/mr_back_layout"
                android:layout_width="@dimen/dp80"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="@dimen/dp16">

                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp28"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dp8"
                    android:src="@mipmap/icon_back" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_set_Name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/dp44"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:paddingTop="@dimen/dp16"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/er_sao"
                android:textColor="@color/white"
                android:textSize="@dimen/dp17" />

        </RelativeLayout>

        <com.shuweikeji.qrcode.view.ViewfinderView
            android:id="@+id/viewfinder_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/control_panel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp90"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:background="@drawable/qb_scan_bar"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dp0"
            android:paddingLeft="@dimen/dp20"
            android:paddingRight="@dimen/dp20"
            android:paddingTop="@dimen/dp0">

            <TextView
                android:id="@+id/select_qrcode_button"
                android:layout_width="@dimen/dp80"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                android:drawableTop="@drawable/qr_qb_scan_album_button"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:text="@string/album_btn"
                android:textColor="#ff999999"
                android:textSize="@dimen/dp12" />

            <TextView
                android:id="@+id/light_on_button"
                android:layout_width="@dimen/dp80"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:drawableTop="@drawable/qr_qb_scan_flash_button"
                android:gravity="center_horizontal"
                android:text="@string/light_on_btn"
                android:textColor="#ff999999"
                android:textSize="@dimen/dp12" />
        </LinearLayout>

        <TextView
            android:id="@+id/status_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/control_panel"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dp30"
            android:layout_marginTop="@dimen/dp10"
            android:background="#00000030"
            android:gravity="center"
            android:text="@string/extension_qrcode_scan_help_tips"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/dp15" />
    </RelativeLayout>

</FrameLayout>